...
        <Text style={styles.loadingText}>Consulting the Archives...</Text>
      </View>
    );
  }

  return (
    <View style={styles.container} testID="profiles-screen">
      <Stack.Screen 
        options={{ 
          headerShown: false,
        }} 
      />
      
...
